fixing some spacing issues on the carousel

--- a/gsusa/content/src/main/theme/custom/scss/components/_carousel.scss
+++ b/gsusa/content/src/main/theme/custom/scss/components/_carousel.scss
@@ -515,6 +515,7 @@ div.carousel {
   .welcome-video-slider {
     max-height: rem-calc(334);
     overflow: hidden;
+    margin-bottom: 0;
     img {
       width: 100%;
     }
